<?xml version="1.0"?>
<package>
  <name>merbots_gui</name>
  <version>0.1.0</version>
  <description>
      Graphical User Interface for "MERBOTS" research project. More info about the project: http://www.irs.uji.es/merbots
  </description>
  
  <maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
  <license>BSD</license>
  <author email="garciaju@uji.es">Juan Carlos Garcia</author>
  <url>https://github.com/jcgarsan/merbots_gui</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

 
</package>
