<?xml version="1.0"?>
<package>
  <name>merbots_gui</name>
  <version>0.1.0</version>
  <description>
      Graphical User Interface for "MERBOTS" research project. More info about the project: http://www.irs.uji.es/merbots
  </description>
  
  <maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
  <license>BSD</license>
  <author email="garciaju@uji.es">Juan Carlos Garcia</author>
  <url>https://github.com/jcgarsan/merbots_gui</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>cola2_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>OpenGL</build_depend>
  <build_depend>compressed_image_transport</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cola2_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>OpenGL</run_depend>
  <run_depend>compressed_image_transport</run_depend>

</package>
